MSA/K8S/configmap-pod-redis-secret.yml
apiVersion: v1
kind: Pod
metadata:
  name: mypod
spec:
  containers:
  - name: mypod
    image: redis
    volumeMounts: #в описании контейнера добавляем блок с описанием хранилищ, которые мы хотим примонтировать
    - name: sfdata #имя хранилища;
      mountPath: "/etc/sfdata" #путь , куда монтируем данные;
      readOnly: true #добавляем флаг, который говорит, что данные доступны только для чтения.
  volumes: #в этом блоке объявляем хранилища, которые можем использовать в контейнерах
  - name: sfdata #имя хранилища, на которое будем ссылать в конфигах контейнера
    secret: # тип источника данных
      secretName: db-user-pass #имя секрета.
