MSA/K8S/configmap-pod-secret-env.yml
apiVersion: v1
kind: Pod
metadata:
  name: mypod
spec:
  containers:
  - name: mypod
    image: redis
    env: #в этой секции объявляем все , что мы хотим, чтобы было в env в контейнере:
      - name: SECRET_USERNAME #имя переменной в окружении;
        valueFrom: #откуда берем данные
          secretKeyRef: #указываем тип источника данных;
            name: db-user-pass #имя секрета;
            key: username.txt #ключ объекта в секрете, который хотим использовать.
      - name: SECRET_PASSWORD
        valueFrom:
          secretKeyRef:
            name: db-user-pass
            key: password.txt
