MSA/K8S/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minimal-ingress
  annotations: #С помощью annotations можно передать дополнительные параметры для контроллера, например, какой сертификат использовать, надо ли детерминировать SSL-трафик, или можно даже написать LUA-скрипты для дополнительной обработки запросов.
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules: #В Rules описываются правила маршрутизации к сервисам: на какой сервис, при каком условии пойдёт трафик, как отвечать на тот или иной тип запроса.
  - host: "foo.bar.com" #Host содержит доменное имя, на которое будет отвечать данная конфигурация. Для одного Ingress-контроллера все имена должны быть уникальными и может существовать лишь один wildcard "*" . В противном случае либо контроллер будет просто игнорировать дубликат, либо откажется работать и упадёт с ошибкой.
    http:
      paths: #Paths описывает пути, которые идут за host, и правила маршрутизации (в какой сервис будет перенаправляться трафик). 
      - path: /testpath
        pathType: Prefix #PathType описывает, как обрабатывать путь. Есть три вида PathType:
#Exact требует точного совпадения имени) : /example совпадает, /example/ — уже нет.
#Prefix требует точного совпадения в начале строки: /example/aa будет совпадать с /example/aa и /example/aa/bbb, но не будет совпадать с /example/aaa или /example/bbb.
#ImplementationSpecific может принимать оба вида (как просто совпадение имени, так и начало строки).
        backend:
          service:
            name: test
            port:
              number: 80
